주현석 연수님이 삭제한 파일 복구

--- a/src/main/resources/templates/user/resume/resume_management.html
+++ b/src/main/resources/templates/user/resume/resume_management.html
@@ -53,7 +53,7 @@
 							<div class="file-info">
 								<div class="file-icon" th:text=${file.fileType}></div>
 								<div class="file-details">
-									<div class="file-name download" th:value="${file.attachmentSeq}" th:text="${file.fileName}"></div>
+									<div class="file-name download" th:value="${file.attachmentSeq}" th:text="${file.originalName}"></div>
 									<div class="file-date" th:text="${file.createdAt}"></div>
 								</div>
 							</div>
