--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -43,7 +43,7 @@
                 <div class="menu-item main-menu">기업관리</div>
                 <a href="/admin_corp2" class="menu-item sub-menu">기업목록</a>
                 <a href="#" class="menu-item sub-menu">제재목록</a>
-                <a href="#" class="menu-item">리뷰관리</a>
+                <a th:href="@{/admin/admin_review}" class="menu-item">리뷰관리</a>
                 <a href="#" class="menu-item">공고관리</a>
             </div>
 
