--- a/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
@@ -776,7 +776,7 @@ function isValidStdEdd(){
                 <button type="button" form="frm" id="submitFormBtn"  class="submit-btn">채용공고 등록하기</button>
                 
                 <div class="preview-section">
-                    <button type="button" class="preview-btn">미리보기</button>
+<!--                     <button type="button" class="preview-btn">미리보기</button> -->
                 </div>
             </div>
 
