--- a/src/main/resources/templates/corp/jobPosting/updateJobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/updateJobPostingForm.html
@@ -792,8 +792,8 @@ function initSalaryFormatting() {
                 <button type="button" form="frm" id="submitFormBtn"  class="submit-btn">채용공고 수정하기</button>
                 
                 <div class="preview-section">
-                    <button type="button" class="preview-btn">미리보기</button>
-                </div>
+<!--                     <button type="button" class="preview-btn">미리보기</button>
+ -->                </div>
             </div>
 
             <div class="sidebar-card tips-section">
