--- a/src/main/resources/templates/user/main_page.html
+++ b/src/main/resources/templates/user/main_page.html
@@ -357,7 +357,7 @@ $(document).ready(function(){
           <div class="notice-section">
           <div style="display: flex; justify-content: space-between; align-items: center;">
           <h2 style="color: #1DD45A;">Notice</h2>
-            <a th:href="@{/notice/list}" style="font-size: 13px; color: gray; text-decoration: none;">더보기</a>
+            <a th:href="@{/user/job_posting/notice_list}" style="font-size: 13px; color: gray; text-decoration: none;">더보기</a>
             </div>
           <div class="notice-info">
             <!-- 공지사항이 없을 때 -->
