--- a/src/main/resources/templates/admin/admin_corp_detail.html
+++ b/src/main/resources/templates/admin/admin_corp_detail.html
@@ -100,7 +100,7 @@
 </tr>
 </tbody>
 </table>
-<a href="/admin_corp2">
+<a href="/admin_corp">
   <input type="button" value="뒤로가기" />
 </a>
 </div>
