--- a/src/main/resources/templates/admin/admin_resume.html
+++ b/src/main/resources/templates/admin/admin_resume.html
@@ -95,7 +95,10 @@ input[type="submit"] {
 <td th:text="${r['RESUME_SEQ']}"></td>
     <td th:text="${r['NAME']}"></td>
     <td th:text="${r['EMAIL']}"></td>
-    <td><a href="/admin_resume" th:text="${r['TITLE']}"></a></td>
+    <td>
+      <a th:href="@{/admin_resume/detail(resume_seq=${r['RESUME_SEQ']})}" 
+           th:text="${r['TITLE']}"></a>
+    </td>
 </tr>
 </tbody>
 </table>
