--- a/src/main/resources/templates/admin/admin_corp.html
+++ b/src/main/resources/templates/admin/admin_corp.html
@@ -77,7 +77,7 @@ form input[type="submit"]:hover {
 
 <th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 <div class="main">
-<form action="/admin_corp2_search">
+<form action="/admin_corp_search">
 <span>사업번호</span>
 <span></span><input type="text" id="corpNo" name="corpNo"/></span><br>
 <span>이름</span>
