--- a/src/main/resources/templates/admin/admin_member.html
+++ b/src/main/resources/templates/admin/admin_member.html
@@ -77,7 +77,7 @@ input[type="submit"]:hover {
 <th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 
 <div class="main">
-<form action="/admin_member_search2">
+<form action="/admin_member_search">
 <span>이메일</span>
 <span><input type="text" id="email" name="email"/></span>
 <span>이름	</span>
