--- a/src/main/resources/templates/admin/admin_member_detail.html
+++ b/src/main/resources/templates/admin/admin_member_detail.html
@@ -119,7 +119,7 @@
 <input type="button" value="제재 취소하기" onclick="submit();"/>
 </form>
 </span>
-<a href="/admin_member2">
+<a href="/admin_member">
   <input type="button" value="뒤로가기" />
 </a>
 
