--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -33,14 +33,14 @@
             <!-- 회원 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">회원관리</div>
-                <a href="/admin_member2" class="menu-item sub-menu">회원목록</a>
+                <a href="/admin_member" class="menu-item sub-menu">회원목록</a>
                 <a href="/admin_resume" class="menu-item">이력서관리</a>
             </div>
 
             <!-- 기업 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">기업관리</div>
-                <a href="/admin_corp2" class="menu-item sub-menu">기업목록</a>
+                <a href="/admin_corp" class="menu-item sub-menu">기업목록</a>
                 <a th:href="@{/admin/admin_review}" class="menu-item">리뷰관리</a>
                 <a href="#" class="menu-item">공고관리</a>
             </div>
