--- a/src/main/resources/templates/admin/admin_jobPosting.html
+++ b/src/main/resources/templates/admin/admin_jobPosting.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>민기인력 - 리뷰관리</title>
+<title>민기인력 - 공고관리</title>
 <link rel="stylesheet" th:href="@{/admin/css/admin_board.css}"/>
 <th:block th:replace="~{fragments/external_file :: cdn_block}"></th:block>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -25,7 +25,7 @@ $(function() {
    
  
 
-  $('#btnWithdraw').on('click', function() {
+ /*  $('#btnWithdraw').on('click', function() {
 	  let selectedIds = [];
 
 	  $('.select-row:checked').each(function() {
@@ -54,7 +54,7 @@ $(function() {
 	      alert('탈퇴 처리 중 오류가 발생했습니다.');
 	    }
 	  });
-	});
+	}); */
 
 });
 </script>
@@ -72,7 +72,7 @@ $(function() {
 <!-- 콘텐츠 영역 -->
 <div class="admin-container">
   <section class="review-wrapper">
-    <h2 class="review-title">리뷰관리</h2>
+    <h2 class="review-title">공고관리</h2>
 
     <!-- 검색+필터 form -->
     <form th:action="@{/admin/admin_review}" method="get">
