--- a/src/main/resources/templates/error/accessDenied.html
+++ b/src/main/resources/templates/error/accessDenied.html
@@ -71,8 +71,7 @@ $(function(){
     <h1 class="access-denied-title">접근이 거부되었습니다</h1>
     <p class="access-denied-message">
       이 페이지에 접근할 권한이 없습니다.<br>
-      로그인된 사용자만 접근 가능하거나,<br>
-      권한이 충분한 경우에만 이용할 수 있습니다.
+      기업회원인 경우에만 이용하실 수 있습니다.
     </p>
     <div class="access-denied-actions">
       <a th:href="@{/}">홈으로 이동</a>
